# vesper

./: COPYRIGHT  Makefile  README.md  update-log.txt  临时笔记.md
cmake-modules/: FindWayland.cmake  FindWaylandProtocols.cmake  FindWlroots.cmake  FindXKB.cmake
doc/: cmdline-args.md  vesper-control-protocol.md
doc/dev/: how-to-add-a-ctrl-protocol.md
doc/pixman 解读/: pixman 数据结构.md
doc/wayland 解读/: wayland 部分名词.md
doc/wlroots api 解读/: wlr scene.md
reference-demo/: tinywl.c
reference-demo/getty/: getty.c
reference-demo/tinywl/: tinywl
src/: CMakeLists.txt  config.cpp.in  config.h  config.h.in  main.cpp  makefile
src/bindings/: pixman.h
src/bindings/pixman/: Region32.cpp  Region32.h
src/common/: MouseButton.h
src/compositor/: Compositor.cpp  Compositor.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  View.cpp  View.h
src/control/: Protocols.cpp  Protocols.h  Server.cpp  Server.h
src/desktop/: README.md
src/desktop/scene/: FramebufferPlate.cpp  FramebufferPlate.h  Output.cpp  Output.h  OutputLayout.cpp  OutputLayout.h  README.md  RenderData.h  RenderTimer.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Surface.cpp  Surface.h  XdgShell.cpp  XdgShell.h
src/desktop/server/: Cursor.cpp  Cursor.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Popup.cpp  Popup.h  README.md  Server.cpp  Server.h  View.cpp  View.h
src/log/: Log.cpp  Log.h
src/utils/: ConsoleColorPad.h  ObjUtils.h  XKeysymToEvdevScancode.cpp  XKeysymToEvdevScancode.h  wlroots-cpp.h
src/vnc/: README.md  Server.cpp  Server.h
